fix issue#6 code block text overflow

--- a/source/css/_base/code.styl
+++ b/source/css/_base/code.styl
@@ -19,6 +19,7 @@ $code-block
   background highlight-background
   margin 0.5em 0
   padding 0.5em 2%
+  word-wrap break-word
   color highlight-foreground
   line-height line-height
   font-size 0.1em
